chore: Add g++ build and debug configuration for C++ program

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,34 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "g++ build and debug active file",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${fileDirname}/${fileBasenameNoExtension}",
+            "args": [
+                "-o ${workspaceRoot}/res/out/file.txt",
+                "-i ${workspaceRoot}/res/txt/basic.txt",
+                "-i ${workspaceRoot}/res/txt/sample.txt"
+            ],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ],
+            "preLaunchTask": "build",
+            "miDebuggerPath": "/usr/bin/gdb",
+            "internalConsoleOptions": "openOnSessionStart"
+        },
+
+
+        {
             "name": "C++ Launch",
             "type": "cppdbg",
             "request": "launch",
